welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:10: error: type mismatch;
 found   : Unit
 required: Boolean
      verifier;
      ^Program:19: error: not found: value vuBiscuit
        vuBiscuit=true;
        ^